--- a/backend/public/css/board.css
+++ b/backend/public/css/board.css
@@ -2,19 +2,19 @@
     display: flex;
     overflow-x: auto;
     gap: 20px;
+    flex-wrap: wrap;
 }
 
 .column {
     background-color: #2c2c2c;
-    /* Preto mais escuro para a coluna */
     padding: 15px;
-    width: 300px;
+    width: calc(33.33% - 20px);
+    width: 250px;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
     min-height: 100px;
     color: #fff;
-    /* Texto branco para contraste */
 }
 
 .column-header {
@@ -23,9 +23,9 @@
     align-items: center;
     padding: 10px;
     background-color: #1e1e1e;
-    /* Um tom de preto ainda mais escuro para o cabeçalho */
     border-radius: 5px;
 }
+
 
 .tasks {
     margin-top: 15px;
@@ -34,14 +34,11 @@
 
 .task {
     background-color: #3a3a3a;
-    /* Preto mais claro para as tarefas */
     padding: 10px;
     margin-bottom: 10px;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-    /* Sombra mais sutil */
     color: #fff;
-    /* Texto branco para contraste */
 }
 
 .task h3 {
@@ -66,7 +63,6 @@
 
 .modal-content {
     background-color: #2c2c2c;
-    /* Cor de fundo escura para o modal */
     margin: 10% auto;
     padding: 20px;
     border: 1px solid #888;
@@ -74,12 +70,10 @@
     max-width: 500px;
     border-radius: 8px;
     color: #fff;
-    /* Texto branco no modal */
 }
 
 .close {
     color: #fff;
-    /* Cor do 'close' branco */
     float: right;
     font-size: 28px;
     font-weight: bold;
@@ -88,7 +82,6 @@
 .close:hover,
 .close:focus {
     color: #aaa;
-    /* Cor ao passar o mouse */
     text-decoration: none;
     cursor: pointer;
 }
@@ -105,7 +98,6 @@
     display: block;
     margin-bottom: 5px;
     color: #fff;
-    /* Texto das labels em branco */
 }
 
 .form-group input,
@@ -113,12 +105,10 @@
     width: 100%;
     padding: 8px;
     border: 1px solid #444;
-    /* Borda escura */
     border-radius: 5px;
     background-color: #333;
-    /* Fundo escuro dos campos */
     color: #fff;
-    /* Texto branco nos campos */
+
 }
 
 .form-actions {
