--- a/laravel_kanban/public/css/board.css
+++ b/laravel_kanban/public/css/board.css
@@ -7,29 +7,68 @@
 
 .column {
     background-color: #2c2c2c;
-    padding: 15px;
+    padding: 0;
+
     width: calc(33.33% - 20px);
-    width: 250px;
+    width: 300px;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
-    min-height: 100px;
-    color: #fff;
+    justify-content: flex-start;
+    align-items: stretch;
+    min-height: auto;
+    color: #000;
+    position: relative;
+
 }
 
 .column-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
     padding: 10px;
     background-color: #1e1e1e;
-    border-radius: 5px;
+    border-radius: 5px 5px 0 0;
+    z-index: 1;
+    box-sizing: border-box;
+    cursor: pointer;
+}
+
+.delete-column-button {
+    background-color: rgb(58, 58, 58);
+    border: none;
+    color: #fff;
+    font-size: 18px;
+    cursor: pointer;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+}
+
+.delete-column-button:hover {
+    background-color: #ff0000;
+    color: #fff;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    transition: background-color 0.3s;
+}
+
+.icon {
+    font-size: 18px;
 }
 
 
 .tasks {
-    margin-top: 15px;
+    margin-top: 0;
+    padding: 15px;
     flex: 1;
+    overflow-y: auto;
+    box-sizing: border-box;
 }
 
 .task {
@@ -39,6 +78,7 @@
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
     color: #fff;
+    height: auto;
 }
 
 .task h3 {
@@ -47,6 +87,27 @@
 
 .task p {
     margin: 5px 0 10px;
+}
+
+/*Botao de adicionar tarefa */
+.add-task-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #3a3a3a;
+    color: #fff;
+    cursor: pointer;
+    height: 20px;
+    margin-top: 10px;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+    transition: background-color 0.3s;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.add-task-button:hover {
+    background-color: #4b4b4b;
 }
 
 .modal {
@@ -124,6 +185,7 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    font-weight: bold;
 }
 
 .btn-cancel:hover {
@@ -137,4 +199,15 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    font-weight: bold;
+}
+
+.btn-delete {
+    background-color: #f44336;
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
 }
