--- a/laravel_kanban/public/css/app.css
+++ b/laravel_kanban/public/css/app.css
@@ -100,3 +100,27 @@ body {
     max-width: 100%;
     margin: 0 auto;
 }
+
+.add-collumn-container {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+/* Botão de adicionar coluna */
+
+.add-column-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(56, 142, 60);
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+}
